Fix Alignment and Javascript

--- a/styles/Sendmsg.css
+++ b/styles/Sendmsg.css
@@ -1,61 +1,80 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-*{
+
+:root {
+  --primary: #0077b6;
+  --primary-hover: #028ed8;
+  --secondary: #0F0101;
+  --black: #000000;
+  --white: #fff;
+  --green-color: #76B51B;
+}
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins',sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
-body{
+
+body {
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 10px;
-  background:#3c5077;
-}
-.main-div{
-	padding:25px;
-	background-color:#81B622;
-	max-width: 700px;
-	height:250px;
+  background: #3c5077;
 }
 
-.container{
+.main-div {
+  padding: 25px;
+  background-color: #81B622;
+  max-width: 700px;
+  height: 250px;
+}
+
+.error {
+  color: red;
+  font-size: 0.9em;
+}
+
+.container {
   max-width: 550px;
   width: 100%;
+  height: 550px;
   background-color: #fff;
   padding: 25px 30px;
   border-radius: 15px;
-  box-shadow: 5px 5px 10px rgba(0,0,0,0.40);
-  position:relative;
-  margin:25px 250px 250px 50px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.40);
+  position: relative;
+  margin: 25px 250px 250px 50px;
 }
-.main-div .title{
+
+.main-div .title {
   font-size: 25px;
   font-weight: 500;
   text-align: center;
-  margin:5px;
-  line-height:40px;
-  letter-spacing:2px;
-  color:#fff;
+  margin: 5px;
+  line-height: 40px;
+  letter-spacing: 2px;
+  color: #fff;
 }
 
-.content form .user-info{
+.content form .user-info {
   justify-content: left;
   margin: 15px 0 8px 0;
 }
 
-form .user-info .input-line{
+form .user-info .input-line {
   margin-bottom: 15px;
   width: calc(100% / 2 - 20px);
 }
 
-form .input-line span.details{
+form .input-line span.details {
   font-weight: 500;
   margin-bottom: 5px;
 }
 
-.user-info .input-line input{
+.user-info .input-line input {
   height: 45px;
   width: 490px;
   outline: none;
@@ -67,7 +86,7 @@ form .input-line span.details{
   transition: all 0.3s ease;
 }
 
-.user-info .input-line textarea{
+.user-info .input-line textarea {
   height: 150px;
   width: 490px;
   outline: none;
@@ -79,76 +98,92 @@ form .input-line span.details{
   transition: all 0.3s ease;
 }
 
-.user-info .input-line input:focus,
-.user-info .input-line input:valid{
-  border-color: #9b59b6;
+form .button {
+  height: 45px;
+  margin: 20px 0
 }
 
-.user-info .input-line textarea:focus,
-.user-info .input-line textarea:valid{
-  border-color: #9b59b6;
+form .button input {
+  height: 100%;
+  width: 100%;
+  border-radius: 5px;
+  border: none;
+  color: #fff;
+  font-size: 15px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  background: var(--primary);
 }
- 
- form .button{
-   height: 45px;
-   margin: 35px 0
- }
- form .button input{
-   height: 100%;
-   width: 100%;
-   border-radius: 5px;
-   border: none;
-   color: #fff;
-   font-size: 15px;
-   font-weight: 500;
-   letter-spacing: 1px;
-   cursor: pointer;
-   transition: all 0.3s ease;
-   background: #81B622;
- }
- form .button input:hover{
-  /* transform: scale(0.99); */
-  background: blue;
+
+form .button input:hover {
+  transform: translateY(-4px);
+  background: var(--primary-hover);
+}
+
+@media(max-width: 584px) {
+  .container {
+    max-width: 100%;
   }
- @media(max-width: 584px){
- .container{
-  max-width: 100%;
-}
-form .user-details .input-box{
+
+  form .user-details .input-box {
     margin-bottom: 15px;
     width: 100%;
   }
-  
-form .user-details .input-line{
+
+  form .user-details .input-line {
     margin-bottom: 15px;
     width: 100%;
   }
-  form .category{
+
+  form .category {
     width: 100%;
   }
-  .content form .user-details{
+
+  .content form .user-details {
     max-height: 300px;
     overflow-y: scroll;
   }
-  .user-details::-webkit-scrollbar{
+
+  .user-details::-webkit-scrollbar {
     width: 5px;
   }
-  }
-  @media(max-width: 459px){
-  .container .content .category{
+}
+
+@media(max-width: 459px) {
+  .container .content .category {
     flex-direction: column;
   }
 }
 
-.text{
-	display: block;
-	color:#000;
-	font-weight:300;
-	font-family: 'Poppins',sans-serif;
-	padding:5px;
+button#cancel {
+  width: 100%;
+  height: 45px;
+  border-radius: 5px;
+  border: none;
+  color: #fff;
+  font-size: 15px;
+  font-weight: 500;
+  cursor: pointer;
+  background: var(--primary);
+  transition: all 0.3s ease;
 }
 
-.downside{
-  height : 450px;
-  background : #ffff;
+button#cancel:hover {
+  background: var(--primary-hover);
+  transform: translateY(-4px);
+}
+
+.text {
+  display: block;
+  color: #000;
+  font-weight: 300;
+  font-family: 'Poppins', sans-serif;
+  padding: 5px;
+}
+
+.downside {
+  height: 450px;
+  background: #ffff;
 }
